--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>cn.xbatis</groupId>
         <artifactId>xbatis</artifactId>
-        <version>1.8.2</version>
+        <version>1.8.3-M1</version>
         <relativePath/>
     </parent>
     <url>https://gitee.com/xbatis/xbatis-solon-plugin</url>
@@ -59,7 +59,7 @@
     </developers>
 
     <properties>
-        <solon.version>3.0.7</solon.version>
+        <solon.version>3.0.9</solon.version>
     </properties>
 
     <dependencyManagement>
