--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>cn.xbatis</groupId>
         <artifactId>xbatis</artifactId>
-        <version>1.9.3-M2</version>
+        <version>1.9.3-M3</version>
         <relativePath/>
     </parent>
     <url>https://gitee.com/xbatis/xbatis-solon-plugin</url>
@@ -59,6 +59,7 @@
     </developers>
 
     <properties>
+        <xbatis.version>1.9.3-M3</xbatis.version>
         <solon.version>3.7.3</solon.version>
     </properties>
 
@@ -82,6 +83,7 @@
         <dependency>
             <groupId>cn.xbatis</groupId>
             <artifactId>xbatis-core</artifactId>
+            <version>${xbatis.version}</version>
         </dependency>
 
         <dependency>
